[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gh-repo-traffic"
version = "0.1.0"
description = "visualize summarized traffic of all your git repositories"
authors = ["Patrick Schneider <pgschdev@gmail.com>"]

# Core dependencies
[tool.poetry.dependencies]
python = ">=3.9,<3.13"      # Specify the Python version range here
requests = "2.31.0"         # For making HTTP requests
python-dotenv = "1.0.0"     # For loading environment variables from .env files
pandas = "1.5.3"            # For data manipulation and analysis
numpy = "^1.25.0"           # For numerical computations
matplotlib = "3.7.2"        # For plotting and visualization (optional)
scipy = "1.11.2"            # For scientific computing (optional)

# Development dependencies
packaging = "^24.2"
rapidfuzz = "^3.10.1"
[tool.poetry.dev-dependencies]
flake8 = "5.0.4"            # For linting and code style checks
black = "23.3.0"            # For code formatting
pytest = "7.1.3"            # For running tests
pytest-cov = "4.0.0"        # For test coverage reporting
unittest-xml-reporting = "*" # For XML test report generation
termcolor = "*"             # For colored terminal output
colorama = "*"              # For cross-platform colored terminal output

# Tool configurations
[tool.black]
#line-length = 88
target-version = ["py39"]
ignore = ["E203", "W503", "E501"]

[tool.flake8]
#max-line-length = 200
ignore = ["E203", "W503", "E501"]

[tool.isort]
profile = "black"

